# py2scratch

./: .gitignore  .pypirc  LICENSE  README.md  output.sb3  pyproject.toml  requirements.txt  scratch.py
.github/workflows/: publish.yaml
py2scratch/: scratch.py
src/: scratch.py
src/py2scratch/: __init__.py  errors.py  scratch.py  scratch_code.py
src/py2scratch/code/: blocks.py  pyparser.py  utils.py
tests/: main.py  output.sb3
