[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]

[project]
name = "py2scratch"
version = "0.1.0dev4"
authors = [{ name = "Crunchitect", email = "crunchitect@gmail.com" }]
description = "A module that converts Python to Scratch (.sb3) files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Crunchitect/py2scratch"
